syntax = "proto3";

package services;

option go_package = "github.com/icaroribeiro/hash-code-challenge/back-end/go/internal/grpc/services";

import "google/protobuf/empty.proto";

import "github.com/icaroribeiro/hash-code-challenge/back-end/go/internal/proto/entities/user.proto";

message GetAllUsersResponse {
    repeated entities.User users = 1;
}

message CreateUserRequest {
    entities.User user = 1;
}

message GetUserRequest {
    string id = 1;
}

message UpdateUserRequest {
    string id = 1;

    entities.User user = 2;
}

message DeleteUserRequest {
    string id = 1;
}

service UserService {
    // Get (read) the list of all users.
    rpc GetAllUsers(google.protobuf.Empty) returns (GetAllUsersResponse);

    // Create a new user.
    rpc CreateUser(CreateUserRequest) returns (entities.User);

    // Get (read) a specific user by its id.
    rpc GetUser(GetUserRequest) returns (entities.User);

    // Update a specific user by its id.
    rpc UpdateUser(UpdateUserRequest) returns (entities.User);

    // Delete a specific user by its id.
    rpc DeleteUser(DeleteUserRequest) returns (entities.User);
}